fix: fix dark mode.

--- a/webf/example/vue_project/src/main.css
+++ b/webf/example/vue_project/src/main.css
@@ -94,8 +94,6 @@ body {
 body {
 	font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	line-height: 1.4em;
-	background: #f5f5f5;
-	color: #111111;
 	min-width: 230px;
 	max-width: 550px;
 	margin: 0 auto;
